[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "openai>=1.90.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
